Fix word overflow in .code

--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -21,6 +21,8 @@
 code.language-plaintext {
   background-color: #ececec;
   padding: 4px 7px;
+  word-wrap: break-word;
+  word-break: break-word;
 }
 
 code {
